--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -1,7 +1,7 @@
 <!-- 头部 start -->
 <script>
     $(function () {
-        $.get("findUserServlet",{},function (data) {
+        $.get("user/find",{},function (data) {
             const msg = "欢迎回来，"+ data.name;
             $("#span_username").html(msg);
         });
