--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -1,4 +1,5 @@
 <!-- 头部 start -->
+<script src="js/getParameter.js"></script>
 <script>
     $(function () {
         $.get("user/find",{},function (data) {
@@ -14,6 +15,12 @@
             }
             lis += '<li><a href="favoriterank.html">收藏排行榜</a></li>';
             $("#category").html(lis);
+        });
+
+        $("#search_button").click(function () {
+            const rname = $("#search_input").val();
+            const cid = getParameter("cid");
+            location.href = "http://localhost/travel/route_list.html?cid="+ cid +"&rname="+ rname;
         });
     });
 </script>
@@ -40,8 +47,8 @@
                     <a href="/"><img src="images/logo.jpg" alt=""></a>
                 </div>
                 <div class="search">
-                    <input name="" type="text" placeholder="请输入路线名称" class="search_input" autocomplete="off">
-                    <a href="javascript:;" class="search-button">搜索</a>
+                    <input name="" type="text" id="search_input" placeholder="请输入路线名称" class="search_input" autocomplete="off">
+                    <a href="javascript: void(0);" id="search_button" class="search-button">搜索</a>
                 </div>
                 <div class="hottel">
                     <div class="hot_pic">
